# chris-coin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: nodes.txt
include/: crow_all.h
src/: main.cpp
src/common/: block.hpp  transaction.hpp
src/core/: block.hpp  blockchain.cpp  blockchain.hpp  transaction.hpp
src/web/: messages.cpp  messages.hpp  node.cpp  node.hpp  peers.cpp  peers.hpp  web.cpp  web.hpp
tests/: test_messages.cpp
